--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,12 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>HotspotStatus - Real-Time Helium Hotspot Status Check</title>
+
+    <!-- Poppins Font -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap&family=Material+Icons&family=Material+Icons+Outlined" rel="stylesheet">
+
+    <title>HotspotStatus - Helium Hotspot Status Check and Management</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
